--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,14 +3,22 @@ site_url: https://atlas.mclarenapplied.com/
 edit_uri: edit/main/docs/
 repo_url: https://github.com/mat-docs/ATLAS.Site
 docs_dir: 'docs'
-site_description: 'Creating custom displays for McLaren ATLAS'
+site_description: '"Comprehensive technical documentation for McLaren ATLAS. Covering custom displays, data integration, APIs, and developer tools'
 
 theme:
   name: material
+  theme:
+    logo: assets/images/logo.svg
+    favicon: assets/images/favicon.ico
   features:
-    - navigation.instant
-    - navigation.footer
+    - navigation.sections
+    - navigation.expand
     - navigation.tabs
+    - toc.integrate
+    - content.code.copy
+    - content.tabs.link
+    - search.suggest
+    - search.highlight
 
 
 copyright: Copyright &copy; 2025 Motion Applied Ltd.
@@ -110,3 +118,9 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tasklist:
       custom_checkbox: true
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/mat-docs/ATLAS.Site
+  generator: false
