--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ site_description: '"Comprehensive technical documentation for McLaren ATLAS. Cov
 
 theme:
   name: material
+  custom_dir: overrides
   palette:
     scheme: default
     primary: 'orange'
@@ -121,6 +122,7 @@ markdown_extensions:
   - pymdownx.keys
   - pymdownx.mark
   - pymdownx.tilde
+  - md_in_html
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.snippets:
