Display API Site migrated

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,15 +82,16 @@ nav:
     - ATLAS: 
       - SQLRace API: developer-resources/atlas/sqlrace.md
       - Display API: 
-        - Overview: developer-resources/atlas/display-api/index.md
+        - Introduction: developer-resources/atlas/display-api/index.md
+        - Getting Started: developer-resources/atlas/display-api/overview.md
         - Tutorials:
-          -  developer-resources/atlas/devguide/createfromscratch.md
-          -  developer-resources/atlas/devguide/diagnostic.md
-          -  developer-resources/atlas/devguide/numericcompare.md
-          -  developer-resources/atlas/devguide/graphical.md
-          -  developer-resources/atlas/devguide/gauge.md
-          -  developer-resources/atlas/devguide/deploymentscript.md
-          -  developer-resources/atlas/devguide/displaypluginlibrary.md
+          -  developer-resources/atlas/display-api/devguide/createfromscratch.md
+          -  developer-resources/atlas/display-api/devguide/diagnostic.md
+          -  developer-resources/atlas/display-api/devguide/numericcompare.md
+          -  developer-resources/atlas/display-api/devguide/graphical.md
+          -  developer-resources/atlas/display-api/devguide/gauge.md
+          -  developer-resources/atlas/display-api/devguide/deploymentscript.md
+          -  developer-resources/atlas/display-api/devguide/displaypluginlibrary.md
         - Enhancing Displays:
           -  developer-resources/atlas/display-api/factoriesandservices.md
           -  developer-resources/atlas/display-api/initialization.md
@@ -103,6 +104,8 @@ nav:
         - Further Information:
             -  developer-resources/atlas/display-api/coreapi.md
             -  developer-resources/atlas/display-api/limitations.md
+            -  developer-resources/atlas/display-api/mvvm.md
+            -  developer-resources/atlas/display-api/prerequisites.md
         - API Reference: "https://mat-docs.github.io/Atlas.DisplayAPI.Documentation/index.html"
       - Automation API: developer-resources/atlas/automation.md
     - RTA: 
