--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -132,6 +132,11 @@ nav:
     - System Requirements: getting-started/sysreqs.md
   - Developer Resources:
     - Overview: developer-resources/index.md
+    - System Monitor: 
+      - Automation API:
+        - Overview: developer-resources/system-monitor/index.md
+        - Reference:  developer-resources/system-monitor/api-methods.md
+        - Example:  developer-resources/system-monitor/api-usage.md
     - SECU4: 
       - Stream API: 
         - Overview:                   developer-resources/secu4/stream_api/index.md
@@ -158,6 +163,7 @@ nav:
         - Overview: developer-resources/atlas/sql-race/index.md
         - Getting Started: developer-resources/atlas/sql-race/integration.md
         - .NET6 Upgrade: developer-resources/atlas/sql-race/net6-upgrade.md
+        - Reference: https://mat-docs.github.io/Atlas.SQLRaceAPI.Documentation/api/index.html
         - Worked Examples:
           - Create Session: developer-resources/atlas/sql-race/examples/create-session.md
           - Functions: developer-resources/atlas/sql-race/examples/functions.md
