--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://atlas.mclarenapplied.com/
 edit_uri: edit/main/docs/
 # repo_url: https://github.com/mat-docs/ATLAS.Site
 docs_dir: 'docs'
-site_description: '"Comprehensive technical documentation for McLaren ATLAS. Covering custom displays, data integration, APIs, and developer tools'
+site_description: '"Comprehensive technical documentation for Motion Applied ATLAS. Covering custom displays, data integration, APIs, and developer tools'
 
 theme:
   name: material
@@ -55,7 +55,7 @@ nav:
           - Keyboard Shortcuts: key-functionality/visualise/atlas/system-operation/keyboard.md
         - Handling Data:
           - Recorders: 
-            - USB Recorder: key-functionality/visualise/atlas/handling-data/recorders/usb-logger.md
+            # - USB Recorder: key-functionality/visualise/atlas/handling-data/recorders/usb-logger.md
             - NASCAR Telemetry Recorder: key-functionality/visualise/atlas/handling-data/recorders/nascar-telemetry-recorder.md
             - Data Server Telemetry Recorder: key-functionality/visualise/atlas/handling-data/recorders/data-server.md
             - File Telemetry Recorder: key-functionality/visualise/atlas/handling-data/recorders/file-telemetry.md
@@ -75,7 +75,6 @@ nav:
           - Overview: key-functionality/visualise/atlas/functions/index.md
           - Processing: key-functionality/visualise/atlas/functions/processing.md
           - Using DLLs: key-functionality/visualise/atlas/functions/using-dlls.md
-          - Tutorial: key-functionality/visualise/atlas/functions/tutorial.md
         - Displays: 
           - Scatterplot: key-functionality/visualise/atlas/displays/scatterplot.md
   - Getting Started: 
