--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,6 +117,7 @@ nav:
         - Getting Started: developer-resources/atlas/sql-race/integration.md
         - .NET6 Upgrade: developer-resources/atlas/sql-race/net6-upgrade.md
         - Reference: https://mat-docs.github.io/Atlas.SQLRaceAPI.Documentation/api/index.html
+        - API Reference: https://mat-docs.github.io/Atlas.SQLRaceAPI.Documentation/api/index.html
         - Worked Examples:
           - Create Session: developer-resources/atlas/sql-race/examples/create-session.md
           - Functions: developer-resources/atlas/sql-race/examples/functions.md
