--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ nav:
           - Keyboard Shortcuts: key-functionality/visualise/atlas/system-operation/keyboard.md
         - Handling Data:
           - Recorders: 
-            # - USB Recorder: key-functionality/visualise/atlas/handling-data/recorders/usb-logger.md
+            - USB Recorder: key-functionality/visualise/atlas/handling-data/recorders/usb-logger.md
             - NASCAR Telemetry Recorder: key-functionality/visualise/atlas/handling-data/recorders/nascar-telemetry-recorder.md
             - Data Server Telemetry Recorder: key-functionality/visualise/atlas/handling-data/recorders/data-server.md
             - File Telemetry Recorder: key-functionality/visualise/atlas/handling-data/recorders/file-telemetry.md
